--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ HOW THE CALCS WORK (simple, trader-friendly):
 - If user provides "Current Premium" we'll compute exit premium using delta*expectedMove; otherwise we estimate entry premium using a simple heuristic so you can test scenarios.
 
 HOSTING QUICK STEPS:
-- GitHub Pages: create a new repo, upload this file, enable Pages from main branch; you get a link like https://<user>.github.io/<repo>/vmmood-strike-finder-pro.html
+- GitHub Pages: create a new repo, upload this file, enable Pages from main branch; you get a link like https://<user>.github.io/<repo>/TradeVibe-strike-finder-pro.html
 - Netlify Drop: drag-and-drop this file at app.netlify.com/drop and you'll get a public link instantly.
 
 -->
@@ -71,7 +71,7 @@ HOSTING QUICK STEPS:
       <div class="logo">
         <div class="dot"></div>
         <div>
-          <h1>VMOOD Strike Finder PRO</h1>
+          <h1>TradeVibe Strike Finder PRO</h1>
           <div class="small">Nifty 50 & BankNifty — Intraday Options (ATM / ITM)</div>
         </div>
       </div>
